# recognize

./: .gitmodules  .travis.yml  README.md
recognize_core_libs/: CMakeLists.txt  package.xml
recognize_core_libs/include/recognize_core_libs/: Labels.h  translations.h  types.h  utils.h
recognize_core_libs/src/recognize_core_libs/: Labels.cpp  translations.cpp  utils.cpp
recognize_core_libs/test/: test_Labels.cpp  test_darknet.cpp  test_utils.cpp
recognize_detection/: CMakeLists.txt  package.xml
recognize_detection/include/recognize_capture/: CameraImageProvider.h  ImageProvider.h  ROSImageProvider.h
recognize_detection/launch/: detection_ros.launch
recognize_detection/src/: detection_node.cpp  image_publisher_node.cpp
recognize_detection/src/recognize_capture/: CameraImageProvider.cpp  ROSImageProvider.cpp
recognize_detection/test/: test_capture.cpp
recognize_msgs/: CMakeLists.txt  package.xml
recognize_msgs/msg/: ArrayBoundingBox.msg  BoundingBox.msg  ImageLabeler.msg
