<?xml version="1.0"?>
<package format="2">
  <name>recognize_detection</name>
  <version>0.0.0</version>
  <description>The recognize_detection package</description>

  <maintainer email="fmrico@gmail.com">paco</maintainer>

  <license>BSD</license>

  <author email="fmrico@gmail.com">Francisco Martin Rico</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>recognize_core_libs</build_depend>
  <build_depend>recognize_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>recognize_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>recognize_core_libs</build_export_depend>
  <build_export_depend>recognize_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>recognize_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>recognize_core_libs</exec_depend>
  <exec_depend>recognize_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>recognize_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
